added eyeball anmiation

--- a/Expanded/index.html
+++ b/Expanded/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Netmining High Impact - Expanded</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="ad">
 
+<head>
+  <meta charset="utf-8">
+  <title>Netmining High Impact - Expanded</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/eyes.css">
+</head>
+
+<body style="background-color:#bababa;">
+  <div class="ad">
+    <object class="nm-logo" type="" data="images/nm-logo.svg"></object>
+    <div class="animation-container eyes">
+      <!-- <img src="images/eye.svg" alt=""> -->
     </div>
-  </body>
+    <div class="guarantee-wrapper">
+      <h1 class="guarantee">Guaranteed&nbsp;<span>Viewability.</span></h1>
+    </div>
+    <div class="guarantee-text-wrapper">
+      <div class="guarantee-text">
+        We guarantee blah blah blah.
+      </div>
+    </div>
+  </div>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+</body>
+
 </html>
