--- a/Expanded/index.html
+++ b/Expanded/index.html
@@ -17,13 +17,7 @@
     <div class="animation-container eyes">
       <!-- <img src="images/eye.svg" alt=""> -->
     </div>
-    <div class="guarantee-wrapper">
-      <h1 class="guarantee">Guaranteed&nbsp;<span>Viewability.</span></h1>
-    </div>
-    <div class="guarantee-text-wrapper">
-      <div class="guarantee-text">
-        We guarantee blah blah blah.
-      </div>
+    <div class="text-container">
     </div>
   </div>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
