--- a/Expanded/index.html
+++ b/Expanded/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/eyes.css">
+  <link rel="stylesheet" href="css/guaranteed.css">
 </head>
 
 <body style="background-color:#bababa;">
   <div class="ad">
     <object class="nm-logo" type="" data="images/nm-logo.svg"></object>
-    <div class="animation-container eyes">
-      <!-- <img src="images/eye.svg" alt=""> -->
+    <div class="animation-container">
     </div>
     <div class="text-container">
     </div>
