--- a/Expanded/index.html
+++ b/Expanded/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body style="background-color:#bababa;">
-  <div class="ad">
+  <div class="ad" style="overflow: hidden;">
     <object class="nm-logo" type="" data="images/nm-logo.svg"></object>
     <div class="animation-container">
     </div>
