--- a/Expanded/index.html
+++ b/Expanded/index.html
@@ -22,6 +22,9 @@
   </div>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript">
+    window.addEventListener("load", animation_1);
+  </script>
 </body>
 
 </html>
