cross-browser fixes

--- a/Expanded/index.html
+++ b/Expanded/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/eyes.css">
   <link rel="stylesheet" href="css/guaranteed.css">
+  <link rel="stylesheet" href="css/learn-more.css">
 </head>
 
 <body style="background-color:#bababa;">
