more updates / cross-browser fixes

--- a/Expanded/index.html
+++ b/Expanded/index.html
@@ -21,7 +21,8 @@
     <div class="text-container">
     </div>
   </div>
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <div id="outdated"></div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript">
     window.addEventListener("load", animation_1);
